<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/green1"
        android:alpha="0.9"
        android:layout_above="@id/bottom_card">

        <!-- Dynamic Content Wrapped in ScrollView -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/radarwhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/radar"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="30sp"/>

                </LinearLayout>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/uName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="28dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="25dp">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="20dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/green"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">

                                <RadioGroup
                                    android:id="@+id/radio_group"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/one_button"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="35dp"
                                        android:buttonTint="@color/white"
                                        android:checked="true"
                                        android:text="@string/one"
                                        android:textColor="@color/white"
                                        android:textSize="15sp"
                                        android:textStyle="bold" />

                                    <RadioButton
                                        android:id="@+id/round_button"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="35dp"
                                        android:layout_toEndOf="@id/one_button"
                                        android:buttonTint="@color/white"
                                        android:checked="false"
                                        android:text="@string/round"
                                        android:textColor="@color/white"
                                        android:textSize="15sp"
                                        android:textStyle="bold" />
                                </RadioGroup>
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>


                        <!--                    FROM-->
                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="20dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/from_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/black"

                            />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30dp" />

                        <!--                    TO-->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/to_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/black" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30dp" />

                        <!--                    DEPARTURE-->
                        <TextView
                            android:layout_width="37dp"
                            android:layout_height="24dp"
                            android:text="@string/day"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/select"
                            android:inputType="none"
                            android:textColor="@color/black" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="30dp" />


                        <Button
                            android:id="@+id/submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:backgroundTint="@color/green"
                            android:text="@string/submit"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Balance"
                    android:layout_marginBottom="-22dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                 <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                     <TextView
                         android:id="@+id/balance"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginTop="22dp"
                         android:layout_gravity="center_horizontal"
                         android:text="@string/balance"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold" />

                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/fund"
                         android:backgroundTint="@color/white"
                         android:layout_width="160dp"
                         android:layout_height="50dp"
                         android:text="Fund Wallet"
                         android:textStyle="bold"
                         android:textColor="@color/green"
                         android:layout_alignParentEnd="true"
                         android:textSize="20sp"
                         app:cornerRadius="12dp"/>
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <!-- Static Bottom Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/booking"
                android:background="@color/green">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ticketwhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/booking"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/wallet" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wallet"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/history"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="32dp"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
